behavioral: add TMDB /find endpoint for external ID lookup
When folder names contain external IDs like [imdb-tt9561862],
TMDBSeriesProvider now tries TMDB /find/{id}?external_source=imdb_id
first, falling back to text search on empty results or errors. This
gives a precise match for series with IMDb IDs in their folder names
instead of relying solely on text search.

Adds TmdbFindResults DTO, findByExternalId to TheMovieDatabaseHttpService,
and a two-stage search strategy (external ID lookup then text fallback)
to TMDBSeriesProvider.