@@ -23,6 +23,7 @@ import java.time.LocalDate;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import lombok.Getter;
@@ -30,6 +31,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
+import tools.jackson.core.JacksonException;
 
 @Slf4j
 @Service
@@ -40,7 +42,58 @@ public class TMDBSeriesProvider implements SeriesMetadataProvider {
 
   @Getter private final ExternalAgentStrategy agentStrategy = ExternalAgentStrategy.TMDB;
 
+  private static final Map<ExternalSourceType, String> TMDB_EXTERNAL_SOURCES =
+      Map.of(ExternalSourceType.IMDB, "imdb_id", ExternalSourceType.TVDB, "tvdb_id");
+
   public Optional<RemoteSearchResult> search(VideoFileParserResult videoInformation) {
+    var findResult = searchByExternalId(videoInformation);
+    if (findResult.isPresent()) {
+      return findResult;
+    }
+
+    return searchByText(videoInformation);
+  }
+
+  private Optional<RemoteSearchResult> searchByExternalId(VideoFileParserResult videoInformation) {
+    if (StringUtils.isBlank(videoInformation.externalId())
+        || videoInformation.externalSource() == null) {
+      return Optional.empty();
+    }
+
+    var tmdbSource = TMDB_EXTERNAL_SOURCES.get(videoInformation.externalSource());
+    if (tmdbSource == null) {
+      return Optional.empty();
+    }
+
+    try {
+      var findResults =
+          theMovieDatabaseHttpService.findByExternalId(videoInformation.externalId(), tmdbSource);
+
+      var tvResults = findResults.getTvResults();
+      if (tvResults != null && !tvResults.isEmpty()) {
+        var tmdbResult = tvResults.getFirst();
+        return Optional.of(
+            RemoteSearchResult.builder()
+                .externalSourceType(ExternalSourceType.TMDB)
+                .externalId(String.valueOf(tmdbResult.getId()))
+                .title(tmdbResult.getName())
+                .build());
+      }
+    } catch (IOException | JacksonException ex) {
+      log.warn(
+          "TMDB /find failed for external ID '{}', falling back to text search",
+          videoInformation.externalId(),
+          ex);
+    } catch (InterruptedException ex) {
+      Thread.currentThread().interrupt();
+      log.error("TMDB /find interrupted for external ID '{}'", videoInformation.externalId(), ex);
+      return Optional.empty();
+    }
+
+    return Optional.empty();
+  }
+
+  private Optional<RemoteSearchResult> searchByText(VideoFileParserResult videoInformation) {
     try {
       var searchResult = theMovieDatabaseHttpService.searchForTvSeries(videoInformation);
 
@@ -48,7 +101,7 @@ public class TMDBSeriesProvider implements SeriesMetadataProvider {
         return Optional.empty();
       }
 
-      var tmdbResult = searchResult.getResults().get(0);
+      var tmdbResult = searchResult.getResults().getFirst();
 
       return Optional.of(
           RemoteSearchResult.builder()
